...
    <string name="app_name">Carrus</string>

    <!-- General -->
    <string name="home">Home</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="nickname">Nickname</string>
    <string name="year">Year</string>
    <string name="license_no">License No.</string>
    <string name="total_miles">Total Miles</string>
    <string name="miles_per_gallon">Miles per gallon</string>
    <string name="tire_pressure">Pressure</string>
    <string name="vin_no">VIN No.</string>
    <string name="color">Color</string>
    <string name="services">Services</string>
    <string name="details">Details</string>
    <string name="car_details">Car Details</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="goto_settings">Go To Settings</string>
    <string name="on">on</string>
    <string name="price_money">$%.2f</string>
    <string name="dollar_sign">$</string>
    <string name="miles">miles</string>
    <string name="miles_per_gal">miles/gal</string>
    <string name="mi_per_gal_city">mi/gal CIty</string>
    <string name="mi_per_gal_highway">mi/gal Highway</string>
    <string name="psi">psi</string>
    <string name="psi_cap">PSI</string>
    <string name="due">Due</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="days">Days</string>
    <string name="not_now">Not now</string>
    <string name="state">State</string>

    <!-- Sorting -->
    <string name="none">none</string>
    <string name="name">name</string>
    <string name="date">date</string>

    <!-- Overview -->
    <string name="car_name">Car Name</string>
    <string name="add_new_car">Add New Car</string>
    <string name="add_new_car_capitalized">ADD NEW CAR</string>
    <string name="menu_delete_car">Delete Car</string>
    <string name="menu_edit_car">Edit Car</string>
    <string name="menu_add_component">Add Component</string>
    <string name="no_services_scheduled">No services scheduled at this time</string>

    <!-- Create/Edit -->
    <string name="create_title">Add a new Car</string>
    <string name="add_a_photo">Add a Photo</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
    <string name="create_upload_docs">Upload Documents\n(e.g. Manual, Insurance)</string>

    <!-- Settings -->
    <string name="setting_dark_mode_title">Dark mode</string>
    <string name="setting_dark_mode_subtitle">Toggle between light and dark themes</string>
    <string name="setting_delete_car_data_title">Delete car data</string>
    <string name="setting_delete_car_data_subtitle">You won\'t be able to get it back!</string>
    <string name="setting_delete_all_services_title">Delete all car services</string>
    <string name="setting_delete_all_services_subtitle">The car data will stay, but not its services</string>
    <string name="dialog_delete_car_title">Delete car data?</string>
    <string name="dialog_delete_services_title">Delete all services from car data?</string>
    <string name="setting_alarm_frequency_title">Alarm frequency</string>
    <string name="setting_alarm_frequency_subtitle">How often do you want to get notified</string>
    <string name="setting_alarm_time_title">Alarm time</string>
    <string name="setting_alarm_time_subtitle_12">Value should be between 1 – 12</string>
    <string name="setting_alarm_time_subtitle_24">Value should be between 0 – 23</string>
    <string name="settings_due_date_format_title">Due date format</string>
    <string name="settings_due_date_format_subtitle">Select the format of the time left until a service\'s due date</string>
    <string name="settings_time_format_title">Clock time format</string>
    <string name="settings_time_format_subtitle">Select between a 12-hour or 24-hour clock format</string>
    <string name="settings_alarm_on_title">Alarms</string>
    <string name="settings_alarm_on_subtitle">Toggle alarms\ ON and OFF</string>

    <!-- Content Description -->
    <string name="label_artwork">Artwork</string>
    <string name="label_icon">Icon</string>
    <string name="label_button">Button</string>
    <string name="label_alert_badge">Alert badge</string>

    <!-- Service -->
    <string name="new_service">New Service</string>
    <string name="edit_service">Edit Service</string>
...

    <!-- Permission Interstitial: Alarms -->
    <string name="missing_permission_interstitial_alarm_title">We cannot set alarms!</string>
    <string name="missing_permission_interstitial_alarm_subtitle">Please enable the alarms permission directly from your settings to continue</string>
    <string name="missing_permission_interstitial_alarm_content">1. Click the Settings button below\n2. Scroll all the way down\n3. Click on \'Alarms &amp; reminders\'\n4. Enable alarms using the toggle</string>

    <string name="settings_export_data">Export Data</string>
    <string name="settings_import_data">Import Data</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings_privacy_policy_title">Privacy policy</string>
    <string name="settings_privacy_policy_subtitle">Click here to open the privacy policy</string>
</resources>
