...

    }

    fun getTimeString(hour: Int): String = "$hour:00 ${
        when (hour) {
            in 1..12 -> "AM"
            in 13..24 -> "PM"
            else -> ""
        }
    }"

    fun getExportData(): String? = carRepository.fetchCarData()?.let { data ->
        Gson().toJson(data)
...

    val pickerOptionsAlarmTime = arrayOf(
        "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12",
        "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24"
    )
    val pickerOptionsDueDateFormat = arrayOf(
        "days", "weeks", "months", "due date"
    )

    companion object {
        const val DEFAULT_ALARM_TIME: Int = 7
        private const val STATE: String = "SettingsViewModel.STATE"
    }
...
