...
                                ImageRequest
                                    .Builder(LocalContext.current)
                                    .data(data = state.imageUri)
                                    .build()
                            ),
                            contentScale = ContentScale.Crop,
                            contentDescription = "Car image"
                        )
                        IconButton(
                            modifier = Modifier
                                .padding(6.dp)
                                .align(Alignment.BottomStart)
                                .background(
...
                                ),
                            onClick = onAddImageClicked
                        ) {
                            Icon(
                                modifier = Modifier.padding(4.dp),
                                imageVector = ImageVector.vectorResource(id = R.drawable.ic_image_add),
                                contentDescription = "Add image icon button",
                                tint = MaterialTheme.colorScheme.primary
                            )
                        }
                        IconButton(
                            modifier = Modifier
                                .padding(6.dp)
...
                                ),
                            onClick = onDeleteImageClicked
                        ) {
                            Icon(
                                modifier = Modifier.padding(4.dp),
                                imageVector = ImageVector.vectorResource(id = R.drawable.ic_trash),
                                contentDescription = "Delete image icon button",
                                tint = MaterialTheme.colorScheme.primary
                            )
                        }
                    }
                }

...
