...
                    },
                )
            }
            if (imageUri != null) {
                LargeTopAppBar(
                    modifier = Modifier
                        .semantics { testTagsAsResourceId = true }.testTag("Large Top Bar")
                        .constrainAs(topbar) { /* No-op */ }
                        .combinedClickable(
                            onClick = { },
                            onLongClick = addTestMessage
                        ),
                    title = {
...
                    actions = actions,
                    scrollBehavior = scrollBehavior
                )
            } else {
                MediumTopAppBar(
                    modifier = Modifier
                        .semantics { testTagsAsResourceId = true }.testTag("Medium Top Bar")
                        .constrainAs(topbar) { /* No-op */ }
                        .combinedClickable(
                            onClick = { },
                            onLongClick = addTestMessage
                        ),
                    title = {
...
