...
    private val createDocumentsContract = registerForActivityResult(
        ActivityResultContracts.CreateDocument(DEFAULT_FILE_MIME_TYPE)
    ) { uri ->
        uri?.let {
            Timber.d("Got result uri from create document contract: $uri")
            when(viewModel.onExportData(it)) {
                true -> { toast("Data export success") }
                false -> toast("Unable to export data")
            }
        } ?: Timber.w("Error fetching uri")
    }

    private val openDocumentContract = registerForActivityResult(
        ActivityResultContracts.OpenDocument()
    ) { uri ->
        uri?.let {
            Timber.d("Got result uri from open document contract: $it")
            toast(when (viewModel.onImportData(it)) {
                true -> "Data import successful"
                false -> "Unable to import data"
            })

        } ?: Timber.w("Unable to read from file with uri")
    }

...
