# The purpose of this script is to edit the car data by going through the edit flow,
# and adding an image as well as deleting, changing, and finally identifying in the Overview screen.
appId: com.ivangarzab.carrus.debug
---
- assertVisible:
    id: "Medium Top Bar"
- tapOn: "Car edit icon button"
- tapOn: "Add a Photo"
- tapOn:
    id: "com.google.android.providers.media.module:id/icon_thumbnail"
    index: 1
- assertNotVisible: "Add a Photo"
- tapOn: "Delete image icon button"
- assertVisible: "Add a Photo"
- tapOn: "Add a Photo"
- tapOn:
    id: "com.google.android.providers.media.module:id/icon_thumbnail"
    index: 0
- assertVisible: "Car image"
- assertNotVisible: "Add a Photo"
- tapOn: "Add image icon button"
- tapOn:
    id: "com.google.android.providers.media.module:id/icon_thumbnail"
    index: 1
- runFlow: # make sure we've on the Overview screen
      when:
          visible:
              text: "Chevrolet Malibu"
      commands:
        - tapOn: "Nickname"
        - inputText: "Shaq"
        - "back"
- "scroll"
- tapOn: "Update"
- assertNotVisible:
    id: "Medium Top Bar"
- assertVisible:
    id: "Large Top Bar"
- assertNotVisible: "Chevrolet Malibu"
- assertVisible: "Shaq"
