# The purpose of this script is to test data export, import, as well as car and service data deletion.
appId: com.ivangarzab.carrus.debug
---
- tapOn: "Settings"
- "scroll"
- tapOn: "Export Data"
- tapOn:
    id: "android:id/title"
- inputText: "temp.txt"
- tapOn: "SAVE"
- assertVisible: "Data export success"
- tapOn: "Delete all car services"
- tapOn:
    point: "50%,50%"
- assertNotVisible: "Delete all car services"
- "back"
- assertVisible: "No services scheduled at this time"
- tapOn: "Settings"
- "scroll"
- tapOn: "Import Data"
- tapOn: "temp.txt"
- assertVisible: "Data import successful"
- "back"
- "scroll"
- assertVisible: "alpha"
- assertVisible: "zetta"
- assertVisible: "omega"
- tapOn: "Settings"
- tapOn: "Delete car data"
- tapOn:
    point: "50%, 50%"
- "back"
- tapOn: "ADD NEW CAR"
- tapOn: "Icon"
- tapOn: "temp.txt"
- assertVisible: "Data imported successfully!"
- assertVisible: "alpha"
- assertVisible: "zetta"
- assertVisible: "omega"
